# Galerkin_AMGX

./: CMakeLists.txt  CSR.cpp  CSR.h  README.md  gasdin2d.cpp  gasdin2d.h
